refactor(java): replace Arrays.asList with List.of
Use immutable List.of() instead of Arrays.asList() for cleaner code:
- PayrollController: PayrollStatus enum values
- Pph21CalculatorController: PtkpStatus enum values

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>